--- a/IncidenceAppMS/src/main/webapp/i18n/es/global.json
+++ b/IncidenceAppMS/src/main/webapp/i18n/es/global.json
@@ -26,6 +26,7 @@
       "admin": {
         "main": "Administración",
         "userManagement": "Gestión de usuarios",
+        "organizations": "Gestión de organizaciones",
         "tracker": "Registro de usuarios",
         "metrics": "Métricas",
         "health": "Salud",
